Corrected button press variable storage. Added RNG selector for computer player

--- a/rps-ui/index.html
+++ b/rps-ui/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <script src="script.js" defer></script>
-    <button class="rock">ROCK</button>
-    <button class="paper">PAPER</button>
-    <button class="scissors">SCISSORS</button> 
+    <button class="rock choice">ROCK</button>
+    <button class="paper choice">PAPER</button>
+    <button class="scissors choice">SCISSORS</button> 
 </body>
 </html>
