Completed UI functionality for RPS game. Includes buttons, choices display, outcome message, and score keeper

--- a/rps-ui/index.html
+++ b/rps-ui/index.html
@@ -11,5 +11,6 @@
     <button class="rock choice">ROCK</button>
     <button class="paper choice">PAPER</button>
     <button class="scissors choice">SCISSORS</button> 
+    <div id="message"></div>
 </body>
 </html>
