Created classes on elements for styling purposes

--- a/rps-ui/index.html
+++ b/rps-ui/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors!</title>
 </head>
 <body>
     <script src="script.js" defer></script>
-    <button class="rock choice">ROCK</button>
-    <button class="paper choice">PAPER</button>
-    <button class="scissors choice">SCISSORS</button> 
+    <div class="top">
+        <h1>Time to play Rock, Paper, Scissors!</h1>
+        <p class="rules">Make your selection:</p>
+    </div>
+    <div class="bottom">
+    <div class="buttons">
+        <button class="rock choice">ROCK</button>
+        <button class="paper choice">PAPER</button>
+        <button class="scissors choice">SCISSORS</button> 
+    </div>
     <div id="message"></div>
+    </div>
 </body>
 </html>
