Made final style changes

--- a/rps-ui/index.html
+++ b/rps-ui/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <script src="script.js" defer></script>
+    <div class="game">
     <div class="top">
         <h1>Time to play Rock, Paper, Scissors!</h1>
         <p class="rules">Make your selection:</p>
@@ -20,6 +21,7 @@
         <button class="scissors choice">SCISSORS</button> 
     </div>
     <div id="message"></div>
+    </div>
     </div>
 </body>
 </html>
